# fiery-porpoise

./: .gitignore  Makefile  README.md  dev-requirements.txt  prod-requirements.txt  pyproject.toml
.devcontainer/: devcontainer.json
projects/terraform/: main.tf
projects/website/: Dockerfile  docker-compose.yaml  docusaurus.config.js  package-lock.json  package.json
projects/website/blog/: 2021-08-01-mdx-blog-post.mdx  2023-07-02-testing-math.md  authors.yml
projects/website/blog/2021-08-26-welcome/: index.md
